src/style/output.css
/* ... */
.max-w-140 {
  max-width: 35rem !important;
}

.max-w-160 {
  max-width: 40rem !important;
}

.max-w-7xl {
  max-width: 80rem !important;
}

.origin-top-right {
  transform-origin: top right !important;
}

.skew-x-20 {
  --tw-skew-x: 20deg !important;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
}

.list-none {
  list-style-type: none !important;
}

.flex-col {
  flex-direction: column !important;
}

.items-center {
  align-items: center !important;
}

.justify-center {
  justify-content: center !important;
}

.justify-between {
  justify-content: space-between !important;
}

.overflow-hidden {
  overflow: hidden !important;
}

.rounded-sm {
  border-radius: 0.125rem !important;
}

.border-4 {
  border-width: 4px !important;
}

.border-red {
  --tw-border-opacity: 1 !important;
  border-color: rgb(239 68 68 / var(--tw-border-opacity)) !important;
}

.bg-blue-dark {
  --tw-bg-opacity: 1 !important;
  background-color: rgb(0 93 168 / var(--tw-bg-opacity)) !important;
}

.bg-red {
  --tw-bg-opacity: 1 !important;
  background-color: rgb(239 68 68 / var(--tw-bg-opacity)) !important;
}

.bg-gradient-to-r {
  background-image: linear-gradient(to right, var(--tw-gradient-stops)) !important;
}

.from-blue-dark {
  --tw-gradient-from: #005da8 var(--tw-gradient-from-position) !important;
  --tw-gradient-to: rgb(0 93 168 / 0) var(--tw-gradient-to-position) !important;
  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to) !important;
}

.to-blue-light {
  --tw-gradient-to: #2ebcfe var(--tw-gradient-to-position) !important;
}

.object-cover {
  -o-object-fit: cover !important;
     object-fit: cover !important;
}

.px-10 {
  padding-left: 2.5rem !important;
  padding-right: 2.5rem !important;
}

.px-4 {
  padding-left: 1rem !important;
  padding-right: 1rem !important;
}

.px-6 {
  padding-left: 1.5rem !important;
  padding-right: 1.5rem !important;
}

.py-16 {
  padding-top: 4rem !important;
  padding-bottom: 4rem !important;
}

.py-2 {
  padding-top: 0.5rem !important;
  padding-bottom: 0.5rem !important;
}

.py-20 {
  padding-top: 5rem !important;
  padding-bottom: 5rem !important;
}

.py-24 {
  padding-top: 6rem !important;
  padding-bottom: 6rem !important;
}

.py-3 {
  padding-top: 0.75rem !important;
  padding-bottom: 0.75rem !important;
}

.py-8 {
  padding-top: 2rem !important;
  padding-bottom: 2rem !important;
}

.pb-2 {
  padding-bottom: 0.5rem !important;
}

.pl-6 {
  padding-left: 1.5rem !important;
}

.pr-1 {
  padding-right: 0.25rem !important;
}

.pr-4 {
  padding-right: 1rem !important;
}

.text-2xl {
  font-size: 1.5rem !important;
  line-height: 2rem !important;
}

.text-3xl {
  font-size: 1.875rem !important;
  line-height: 2.25rem !important;
}

.text-xl {
  font-size: 1.25rem !important;
  line-height: 1.75rem !important;
}

.font-bold {
  font-weight: 700 !important;
}

.text-blue-dark {
  --tw-text-opacity: 1 !important;
  color: rgb(0 93 168 / var(--tw-text-opacity)) !important;
}

.text-white {
  --tw-text-opacity: 1 !important;
  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
}

.after\:absolute::after {
  content: var(--tw-content) !important;
  position: absolute !important;
}

.after\:-right-8::after {
  content: var(--tw-content) !important;
  right: -2rem !important;
}

.after\:-top-4::after {
  content: var(--tw-content) !important;
  top: -1rem !important;
}

.after\:top-0::after {
  content: var(--tw-content) !important;
  top: 0px !important;
}

.after\:-z-10::after {
  content: var(--tw-content) !important;
  z-index: -10 !important;
}

.after\:-ml-56::after {
  content: var(--tw-content) !important;
  margin-left: -14rem !important;
}

.after\:block::after {
  content: var(--tw-content) !important;
  display: block !important;
}

.after\:h-full::after {
  content: var(--tw-content) !important;
  height: 100% !important;
}

.after\:w-12::after {
  content: var(--tw-content) !important;
  width: 3rem !important;
}

.after\:-skew-x-20::after {
  content: var(--tw-content) !important;
  --tw-skew-x: -20deg !important;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
}

.after\:border-b-0::after {
  content: var(--tw-content) !important;
  border-bottom-width: 0px !important;
}

.after\:border-r-0::after {
  content: var(--tw-content) !important;
  border-right-width: 0px !important;
}

.after\:bg-blue-dark::after {
  content: var(--tw-content) !important;
  --tw-bg-opacity: 1 !important;
  background-color: rgb(0 93 168 / var(--tw-bg-opacity)) !important;
}

.after\:content-empty::after {
  --tw-content: "" !important;
  content: var(--tw-content) !important;
}

.after\:content-triangle-red::after {
  --tw-content: url('@/assets/images/icons/triangle-red.svg') !important;
  content: var(--tw-content) !important;
}
/* ... */

